nav wrap fix
adding wrap to the class of the nav fixed the gutter issue.

--- a/app/assets/stylesheets/custom_objects/_content-wrapper.scss
+++ b/app/assets/stylesheets/custom_objects/_content-wrapper.scss
@@ -1,7 +1,6 @@
 .content-wrapper {
   * {
       box-sizing: border-box;
-      background-color: white;
   }
   .row::after {
       content: "";
