--- a/app/assets/stylesheets/custom_objects/_nav.scss
+++ b/app/assets/stylesheets/custom_objects/_nav.scss
@@ -1,45 +1,43 @@
 .nav-wrapper {
-  left: 0;
-	width: 100%;
-	overflow: hidden;
-	background-color: $neutral-black;
+    padding: 10px;
+    background-color: $neutral-black;
 
-  .nav {
-    margin-right: 0;
-		width: 100%;
+    .nav {
+        margin: auto;
+    		width: 100%;
 
-    ul {
-        list-style-type: none;
-        margin-left: 15px;
-        overflow: hidden;
-        background-color: $neutral-black;
-    }
+        ul {
+            list-style-type: none;
+            margin-left: 15px;
+            overflow: hidden;
+            background-color: $neutral-black;
+        }
 
-    li {
-        float: left;
-        border-right:1px solid #bbb;
-    }
+        li {
+            float: left;
+            border-right:1px solid #bbb;
+        }
 
-    li:last-child {
-        border-right: none;
-    }
+        li:last-child {
+            border-right: none;
+        }
 
-    li a {
-        display: block;
-        color: white;
-        text-align: center;
-        padding: 10px 12px;
-        text-decoration: none;
-        font-size: 9px;
-    }
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 10px 12px;
+            text-decoration: none;
+            font-size: 9px;
+        }
 
-    li a:hover:not(.active) {
-        background-color: #111;
-    }
+        li a:hover:not(.active) {
+            background-color: #111;
+        }
 
-    .active {
-        background-color: #4CAF50;
-    }
-  }
+        .active {
+            background-color: #4CAF50;
+        }
+      }
 
 }
